--- a/systemd/xj-autosetup.service
+++ b/systemd/xj-autosetup.service
@@ -1,11 +1,13 @@
 [Unit]
 Description=Auto setup & update XJServer
 After=network-online.target
+Wants=network-online.target
 
 [Service]
 Type=oneshot
 ExecStart=/opt/xjserverscript/xj-autosetup.sh
 RemainAfterExit=no
+TimeoutStartSec=300   # wait up to 5 min in case network is slow
 
 [Install]
 WantedBy=multi-user.target
