--- a/systemd/xj-autosetup.service
+++ b/systemd/xj-autosetup.service
@@ -5,7 +5,7 @@ Wants=network-online.target
 
 [Service]
 Type=oneshot
-ExecStart=/opt/xjserver/xjserverscript/xj-autosetup.sh
+ExecStart=/bin/bash /opt/xjserver/xjserverscript/xj-autosetup.sh
 RemainAfterExit=no
 
 [Install]
