--- a/systemd/3xjserverudpip.service
+++ b/systemd/3xjserverudpip.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=XJServer UDP Listener and Periodic Scan
-After=network-online.target xj-autosetup.service
-Requires=xj-autosetup.service
+After=network-online.target xjserver.service
+Requires=xjserver.service
 
 
 [Service]
