--- a/systemd/4xjserverws.service
+++ b/systemd/4xjserverws.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=XJServer ESP32 WebSocket Service
-After=network-online.target xj-autosetup.service
-Requires=xj-autosetup.service
+After=network-online.target xjserver.service
+Requires=xjserver.service
 
 
 [Service]
