--- a/systemd/xjserverstart.service
+++ b/systemd/xjserverstart.service
@@ -3,10 +3,12 @@ Description=Run XJServer One-Shot Startup Job
 After=network-online.target xj-autosetup.service
 Requires=xj-autosetup.service
 
-
 [Service]
 Type=oneshot
 User=orangepi
 WorkingDirectory=/opt/xjserver
-Environment="XJSERVER_ENCRYPT_KEY=RzULegZUeKrA7MmeU9rQ6_WBWZ51Ka8xsLVSoMBAKK8="
 ExecStart=/opt/xjserver/venv/bin/python -u /opt/xjserver/startup.py
+RemainAfterExit=yes
+
+[Install]
+WantedBy=multi-user.target
