--- a/systemd/xjserverstart.service
+++ b/systemd/xjserverstart.service
@@ -7,6 +7,7 @@ Requires=xj-autosetup.service
 Type=oneshot
 User=orangepi
 WorkingDirectory=/opt/xjserver
+Environment="XJSERVER_ENCRYPT_KEY=RzULegZUeKrA7MmeU9rQ6_WBWZ51Ka8xsLVSoMBAKK8="
 ExecStart=/opt/xjserver/venv/bin/python -u /opt/xjserver/startup.py
 RemainAfterExit=yes
 
